Fixed an issue where the index and main menu pages were not scrollable (because the game page uses overflow: hidden), which could lead to the compatibility warning being cut off.

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,11 @@ body
 	max-width: 1920px;
 }
 body:not(#index)
-{ min-width: 1024px }
+{
+	min-width: 1024px;
+	overflow-x: hidden;
+	overflow-y: hidden;
+}
 input, select { background-color: #fff }
 input[type='text'],
 input[type='password']
